# hf-spaces-stats-builder

./: pyproject.toml  requirements.txt
.github/workflows/: etl.yml
src/: pipeline.py
